Fix z-index layer for dropdowns in popup mode
Fix z-index layer for dropdowns in popup mode with a more specific selector, based on code review feedback about potential side-effects from the previous approach

--- a/src/scripts/Providers/OSUI/Dropdown/VirtualSelect/scss/_virtualselect.scss
+++ b/src/scripts/Providers/OSUI/Dropdown/VirtualSelect/scss/_virtualselect.scss
@@ -636,6 +636,10 @@ body {
 		.vscomp-wrapper {
 			z-index: var(--layer-global-off-canvas);
 		}
+
+		&:has(.osui-notification--is-open) .vscomp-wrapper {
+			z-index: var(--layer-global-instant-interaction);
+		}
 	}
 }
 
